--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -66,6 +66,7 @@
     @media screen and (max-width: 600px) {
         a {
             font-size: 1rem;
+            padding: 0.5rem 0;
         }
 
         p {
